// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> CriticalRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-critical btn-primary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-critical btn-secondary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-critical btn-tertiary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> Default story renders snapshot 1`] = `
<div
  class="p-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`<Button /> DefaultRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-default btn-primary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default btn-secondary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default btn-tertiary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> Disabled story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--disabled button--primary button--lg button--size-lg button--variant-default btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--disabled button--secondary button--lg button--size-lg button--variant-default btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--disabled button--tertiary button--lg button--size-lg button--variant-default btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> DisabledFullWidths story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-none button--disabled button--full-width button--primary button--lg button--size-lg button--variant-default"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-none button--disabled button--full-width button--primary button--md button--size-md button--variant-default"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-md button__text"
      >
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-none button--disabled button--full-width button--primary button--sm button--size-sm button--variant-default"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-sm button__text"
      >
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> FullWidths story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-none button--full-width button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-none button--full-width button--primary button--md button--size-md button--variant-default"
      type="button"
    >
      <span
        class="text text--label-md button__text"
      >
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-none button--full-width button--primary button--sm button--size-sm button--variant-default"
      type="button"
    >
      <span
        class="text text--label-sm button__text"
      >
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> IconLayouts story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      class="button button--layout-left button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
          />
        </svg>
        Left
      </span>
    </button>
    <button
      class="button button--layout-right button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Right
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Label must be applied with icon-only layout"
      class="button button--layout-icon-only button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> IconOnlySizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-icon-only button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-icon-only button--primary button--md button--size-md button--variant-default"
      type="button"
    >
      <span
        class="text text--label-md button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-icon-only button--primary button--sm button--size-sm button--variant-default"
      type="button"
    >
      <span
        class="text text--label-sm button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> InverseDisabledRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--disabled button--primary button--lg button--size-lg button--variant-inverse btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--disabled button--secondary button--lg button--size-lg button--variant-inverse btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--disabled button--tertiary button--lg button--size-lg button--variant-inverse btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> InverseRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-inverse btn-primary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-inverse btn-secondary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-inverse btn-tertiary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> JustDisabledProp story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-default btn-primary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default btn-secondary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default btn-tertiary"
      disabled=""
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> LeftIconSizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-left button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-left button--primary button--md button--size-md button--variant-default"
      type="button"
    >
      <span
        class="text text--label-md button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-left button--primary button--sm button--size-sm button--variant-default"
      type="button"
    >
      <span
        class="text text--label-sm button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> LoadingStates story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-none button--loading button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text button--is-loading"
      >
        Large
      </span>
      <div
        aria-busy="true"
        aria-label="loading"
        class="loading-indicator button__loader"
        data-testid="oval-loading"
        role="status"
      >
        <svg
          data-testid="oval-svg"
          height="16"
          stroke="transparent"
          viewBox="-22 -22 46 46"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              data-testid="oval-secondary-group"
              stroke-width="4"
              transform="translate(1 1)"
            >
              <circle
                cx="0"
                cy="0"
                r="20"
                stroke="transparent"
                stroke-opacity=".5"
                stroke-width="4"
              />
              <path
                d="M20 0c0-9.94-8.06-20-20-20"
              >
                <animatetransform
                  attributeName="transform"
                  dur="1s"
                  from="0 0 0"
                  repeatCount="indefinite"
                  to="360 0 0"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-none button--loading button--primary button--md button--size-md button--variant-default"
      type="button"
    >
      <span
        class="text text--label-md button__text button--is-loading"
      >
        Medium
      </span>
      <div
        aria-busy="true"
        aria-label="loading"
        class="loading-indicator button__loader"
        data-testid="oval-loading"
        role="status"
      >
        <svg
          data-testid="oval-svg"
          height="16"
          stroke="transparent"
          viewBox="-22 -22 46 46"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              data-testid="oval-secondary-group"
              stroke-width="4"
              transform="translate(1 1)"
            >
              <circle
                cx="0"
                cy="0"
                r="20"
                stroke="transparent"
                stroke-opacity=".5"
                stroke-width="4"
              />
              <path
                d="M20 0c0-9.94-8.06-20-20-20"
              >
                <animatetransform
                  attributeName="transform"
                  dur="1s"
                  from="0 0 0"
                  repeatCount="indefinite"
                  to="360 0 0"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-none button--loading button--primary button--sm button--size-sm button--variant-default"
      type="button"
    >
      <span
        class="text text--label-sm button__text button--is-loading"
      >
        Small
      </span>
      <div
        aria-busy="true"
        aria-label="loading"
        class="loading-indicator button__loader"
        data-testid="oval-loading"
        role="status"
      >
        <svg
          data-testid="oval-svg"
          height="16"
          stroke="transparent"
          viewBox="-22 -22 46 46"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              data-testid="oval-secondary-group"
              stroke-width="4"
              transform="translate(1 1)"
            >
              <circle
                cx="0"
                cy="0"
                r="20"
                stroke="transparent"
                stroke-opacity=".5"
                stroke-width="4"
              />
              <path
                d="M20 0c0-9.94-8.06-20-20-20"
              >
                <animatetransform
                  attributeName="transform"
                  dur="1s"
                  from="0 0 0"
                  repeatCount="indefinite"
                  to="360 0 0"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> NeutralRanks story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-neutral btn-primary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--size-lg button--variant-neutral btn-secondary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-neutral btn-tertiary"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> RightIconSizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-right button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Large
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-right button--primary button--md button--size-md button--variant-default"
      type="button"
    >
      <span
        class="text text--label-md button__text"
      >
        Medium
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-right button--primary button--sm button--size-sm button--variant-default"
      type="button"
    >
      <span
        class="text text--label-sm button__text"
      >
        Small
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> Sizes story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Large button"
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        Large
      </span>
    </button>
    <button
      aria-label="Medium button"
      class="button button--layout-none button--primary button--md button--size-md button--variant-default"
      type="button"
    >
      <span
        class="text text--label-md button__text"
      >
        Medium
      </span>
    </button>
    <button
      aria-label="Small button"
      class="button button--layout-none button--primary button--sm button--size-sm button--variant-default"
      type="button"
    >
      <span
        class="text text--label-sm button__text"
      >
        Small
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> Tertiary story renders snapshot 1`] = `
<div
  class="p-1"
>
  <button
    class="button button--layout-left button--tertiary button--sm button--size-sm button--variant-default"
    type="button"
  >
    <span
      class="text text--label-sm button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="16px"
        style="--icon-size: 16px;"
        viewBox="0 0 24 24"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 17.6342V16.1345H20.5V17.6342H3.5ZM3.5 12.7497V11.2497H20.5V12.7497H3.5ZM3.5 7.86498V6.36523H20.5V7.86498H3.5Z"
        />
      </svg>
      Button
    </span>
  </button>
</div>
`;

exports[`<Button /> TertiaryStandalone story renders snapshot 1`] = `
<div
  class="p-1"
>
  <button
    class="button button--context-standalone button--layout-none button--tertiary button--lg button--size-lg button--variant-default"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`<Button /> UsingExtendedLink story renders snapshot 1`] = `
<div
  class="p-1"
>
  <div>
    Lorem ipsum dolor sit amet, . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
    <button
      class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
      to="test"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        consectetur adipiscing elit
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--size-lg button--variant-default exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  <span
    class="text text--label-lg button__text"
  >
    Click
  </span>
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
  data-testid="example-test-id"
  type="button"
>
  <span
    class="text text--label-lg button__text"
  >
    Click
  </span>
</button>
`;
